--- a/tip/421.md
+++ b/tip/421.md
@@ -8,7 +8,7 @@
 	Author:		Brad Lanam <brad.lanam.comp@gmail.com>
 	Author:		Donal K. Fellows <dkf@users.sf.net>
 	Created:	28-Nov-2012
-        Updated:        2017-10-24
+	Updated:	24-Oct-2017
 -----
 
 # Abstract
@@ -56,18 +56,17 @@ will have their normal interpretation as loop control operations.
 
 # Implementation
 
-  Branch: bll-array-for
+Branch: `bll-array-for`
 
-  Code is also available within a comment at:
-     https://github.com/flightaware/Tcl-bounties/issues/12
+Code is also available [here](https://github.com/flightaware/Tcl-bounties/issues/12) within a comment.
 
-  The implementation is no faster then using **array names** or
-  **array get**, but uses much less memory.
+The implementation is no faster then using **array names** or
+**array get**, but uses much less memory.
 
 # References
 
-  https://github.com/flightaware/Tcl-bounties/issues/12
-  https://github.com/flightaware/Tcl-bounties/issues/27
+[Bounty #12](https://github.com/flightaware/Tcl-bounties/issues/12),
+[Bounty #27](https://github.com/flightaware/Tcl-bounties/issues/27)
 
 # Copyright
 
