Corrected branch name

--- a/tip/421.md
+++ b/tip/421.md
@@ -56,9 +56,9 @@ will have their normal interpretation as loop control operations.
 
 # Implementation
 
-Branch: `bll-array-for`
-
-Code is also available [here](https://github.com/flightaware/Tcl-bounties/issues/12) within a comment.
+Branch: `tip-421` (Code is also available
+[here](https://github.com/flightaware/Tcl-bounties/issues/12) within a
+comment, but that is _not_ the definitive version.)
 
 The implementation is no faster then using **array names** or
 **array get**, but uses much less memory.
