Start vote on 421; vote closes [clock format 1523984400]

--- a/tip/421.md
+++ b/tip/421.md
@@ -2,7 +2,7 @@
 	State:		Draft
 	Type:		Project
 	Tcl-Version:	8.7
-	Vote:		Pending
+	Vote:		In progress
 	Post-History:
 	Author:		Karl Lehenbauer <karllehenbauer@gmail.com>
 	Author:		Brad Lanam <brad.lanam.comp@gmail.com>
