Added clarification discussed on tcl-core and elsewhere.

--- a/tip/421.md
+++ b/tip/421.md
@@ -54,6 +54,10 @@ evaluating the script _body_. The result will be the empty string \(excepting
 errors, **return**, etc.\) and any contained **break** and **continue**
 will have their normal interpretation as loop control operations.
 
+Modifying the array while this command is iterating over it will make the
+**array for** command terminate with an error once the current execution of
+_body_ finishes.
+
 # Implementation
 
 Branch: `tip-421` (Code is also available
