Documented in TIP #496 that -justify can only be honored if there is enough display space, and a bit of reformatting.

--- a/tip/496.md
+++ b/tip/496.md
@@ -1,5 +1,6 @@
 # TIP 496: Display hints in ::entry ::spinbox ::ttk::entry ::ttk::spinbox and ::ttk::combobox
 	Author:         René Zaumseil <rzaumseil@kkg.ch>
+	Author:         François Vogel <fvogelnew1@free.fr>
 	State:          Draft
 	Type:           Project
 	Vote:           Pending
@@ -25,19 +26,14 @@ The **entry**,  **spinbox**, **ttk::entry**, **ttk::spinbox** and **ttk::combobo
 A help text can be displayed on **entry**,  **spinbox**, **ttk::entry**, **ttk::spinbox** and **ttk::combobox** widgets if no text is otherwise displayed.
 To control the text appearance the following new options will be added:
 
- -placeholder: The string to display.
+ **-placeholder**: The string to display. If empty (the default value) then nothing is displayed. This text value is always displayed with current font and justification. Note that justification can really be honored only if the available display space is large enough to contain the complete text value (this is anyway true also for the widget text itself, see [Tcl Core discussion] (http://code.activestate.com/lists/tcl-core/19657/)).
 
- -placeholderforeground: The color of the text. This is a normal option for the Tk widgets and a style option for the Ttk widgets.
-
-If the -placeholder text is empty (the default value) then nothing is displayed.
-
-The -placeholderforeground has a default value of #b3b3b3 (gray70).
-
-The -placeholder text value is always displayed with current font and justification.
+ **-placeholderforeground**: The color of the text. This is a normal option for the Tk widgets and a style option for the Ttk widgets. Default value is #b3b3b3 (gray70).
 
 # Implementation
 
-A patch implementing these changes is available in the fossil repository in the tip-496 branch.
+A patch implementing these changes is available in the fossil repository in the [tip-496 branch]
+(https://core.tcl.tk/tk/timeline?r=tip-496).
 
 Documentation updates not yet done.
 
