TIP #496 now in VOTING state

--- a/tip/496.md
+++ b/tip/496.md
@@ -1,9 +1,9 @@
 # TIP 496: Display hints in ::entry ::spinbox ::ttk::entry ::ttk::spinbox and ::ttk::combobox
 	Author:         René Zaumseil <rzaumseil@kkg.ch>
 	Author:         François Vogel <fvogelnew1@free.fr>
-	State:          Draft
+	State:          Voting
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        17-Jan-2018
 	Post-History:   
 	Keywords:       Tk
