--- a/tip/491.md
+++ b/tip/491.md
@@ -11,7 +11,7 @@
 
 # Abstract
 
-Since TIP #364 proposed improving thread support, time has come to gradually phase out
+Since [TIP #364](364.md) proposed improving thread support, time has come to gradually phase out
 non-threaded builds on all platforms. On Windows and MacOSX, there are known problems
 on non-threaded build. But also on UNIX it is becoming increasingly difficult to support
 both threaded and non-threaded builds. This TIP proposes a gradual deprecation and removal
@@ -21,28 +21,28 @@ of support for non-threaded builds.
 
 Non-threaded builds have a number of known problems:
 
-    * On Windows, dde and sockets don't work correctly, as they need threads to operate.
+ * On Windows, DDE and sockets don't work correctly, as they need threads to operate.
 
-	* On UNIX, the new epoll() and kqueue() notifiers (TIP #458) expect the pthread locking to be available.
+ * On UNIX, the new `epoll()` and `kqueue()` notifiers ([TIP #458](458.md)) expect the pthread locking to be available.
 
-Further on, the nmake build system uses a different suffix "t" than the autoconf-based build system, a historical
+Further on, the nmake build system uses a different suffix, `t`, than the autoconf-based build system, a historical
 mistake that cannot be corrected in a patch release. Let's correct that in Tcl 8.7.
 
-A common misconception is that non-threaded builds are necessary to make vfork and/or signals work correctly. That
-may have been true in the past, but not any more: vfork works fine in threaded builds, the only caveat is that
+A common misconception is that non-threaded builds are necessary to make `vfork()` and/or signals work correctly. That
+may have been true in the past, but not any more: `vfork()` works fine in threaded builds, the only caveat is that
 threads started before the vfork don't survive the fork. So, as long as new threads are created after doing the fork,
 everything should work fine. Applications like AOLserver use this already.
-	
+
 # Proposal
 
-  * Include the following snippet in tcl.h:
+  * Include the following snippet in `tcl.h`:
   <pre>
      #ifndef TCL\_THREADS
 	 #   define TCL\_THREADS 1
 	 #endif
   </pre>
 
-  * Include the following snippet in tclInt.h:
+  * Include the following snippet in `tclInt.h`:
   <pre>
      #if TCL\_THREADS && !defined(USE\_THREAD\_ALLOC)
 	 #   define USE\_THREAD\_ALLOC 1
@@ -51,14 +51,17 @@ everything should work fine. Applications like AOLserver use this already.
 
 This means that the (nmake/autoconf) build systems no longer need to explicitely set those
 two options, a threaded build will be the default. Non-threaded builds are still possible,
-adding the flag "-DTCL_THREADS=0" to the Makefile. Hopefully this further discourages
+adding the flag `-DTCL_THREADS=0` to the Makefile. Hopefully this further discourages
 non-threaded builds.
 
-  * In the autoconf build system, remove the --disable-threads option.
+  * In the autoconf build system, remove the `--disable-threads` option.
 
-  * In the nmake build system, don't use "t" any longer as suffix, and remove the "nothreads" and "thrdalloc" build options.
+  * In the nmake build system, don't use `t` any longer as suffix, and remove the `nothreads` and `thrdalloc` build options.
 
-  * In Tcl 9, fully remove the use of TCL_THREADS throughout the whole source code. The value "1" is assumed
+In Tcl 9:
+
+  * fully remove the use of `TCL_THREADS` throughout the whole source
+    code. The value is assumed to be `1`
     everywhere. Non-threaded builds are no longer possible.
 
 # Implementation
