--- a/tip/421.md
+++ b/tip/421.md
@@ -1,14 +1,17 @@
 # TIP 421: A Command for Iterating Over Arrays
-	State:		Draft
+	State:		Accepted
 	Type:		Project
 	Tcl-Version:	8.7
-	Vote:		In progress
+	Vote:		Done
 	Post-History:
 	Author:		Karl Lehenbauer <karllehenbauer@gmail.com>
 	Author:		Brad Lanam <brad.lanam.comp@gmail.com>
 	Author:		Donal K. Fellows <dkf@users.sf.net>
 	Created:	28-Nov-2012
 	Updated:	24-Oct-2017
+	For:	DKF, AF, JN, SL, KBK, DGP, AK
+	Against:	none
+	Present:	none
 -----
 
 # Abstract
