Vote done: 3 x YES (JN, DGP, KBK), 0 x NO, 0 x PRESENT

--- a/tip/389.md
+++ b/tip/389.md
@@ -1,9 +1,9 @@
 # TIP 389: Full support for Unicode 10.0 and later (part 1)
 	Author:         Jan Nijtmans <jan.nijtmans@users.sf.net>
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
-	State:          Voting
+	State:          Final
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        23-Aug-2011
 	Post-History:   
 	Discussions-To: Tcl Core list
