Add another advantage (as formulated by Donald G Porter)

--- a/tip/491.md
+++ b/tip/491.md
@@ -33,6 +33,10 @@ may have been true in the past, but not any more: `vfork()` works fine in thread
 threads started before the vfork don't survive the fork. So, as long as new threads are created after doing the fork,
 everything should work fine. Applications like AOLserver use this already.
 
+If the developers of Tcl itself can count on threading facilities as part of the foundation, they can be free to use
+threads when useful in writing the code of the Tcl library itself, without being bound to also invent a thread-free
+version to cover the --disable-threads configuration.
+
 # Proposal
 
   * Include the following snippet in `tcl.h`:
