TIP #491 now in voting

--- a/tip/491.md
+++ b/tip/491.md
@@ -1,8 +1,8 @@
 # TIP 491: Threading Support: phasing out non-threaded builds
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
-	State:          Draft
+	State:          Voting
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        11-Dec-2017
 	Post-History:
 	Keywords:       threads
@@ -53,7 +53,7 @@ version to cover the --disable-threads configuration.
 	 #endif
   </pre>
 
-This means that the (nmake/autoconf) build systems no longer need to explicitely set those
+This means that the (nmake/autoconf) build systems no longer need to explicitly set those
 two options, a threaded build will be the default. Non-threaded builds are still possible,
 adding the flag `-DTCL_THREADS=0` to the Makefile. Hopefully this further discourages
 non-threaded builds.
