Add branch-name for ongoing TIP #497 implementation. Other typo.

--- a/tip/425.md
+++ b/tip/425.md
@@ -112,7 +112,7 @@ order to bring the responsibility for correct linking
 to the embedding application, in stead of Tcl. In
 case of tclsh.exe, this makes no difference.
 
-In additon, starting with Tcl 9.0, the default
+In addition, starting with Tcl 9.0, the default
 panic proc is changed to direct the output to the
 UI in stead of stderr. Since the new _Tcl\_ConsolePanic_
 is meant for stderr-related output, this means
