--- a/tip/497.md
+++ b/tip/497.md
@@ -1,4 +1,4 @@
-# TIP 497: Full support for Unicode 10.0 and later (part 2)
+# TIP 497: Full support for Unicode 11.0 and later (part 2)
 	Author:         Jan Nijtmans <jan.nijtmans@users.sf.net>
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
 	Author:         Don Porter <donald.porter@nist.gov>
@@ -34,7 +34,7 @@ This document proposes:
    per character.
 
  * Adapt the regexp engine to start using the "UTF-32" objType: Any string
-   handled by regexp will first be converted to "UTF-32".
+   handled by regexp will first be converted to "UTF-32". (DONE in tip-497 branch)
 
  * Modify all API using Tcl_UniChar: If the string contains surrogate pairs,
    the "UTF-32" objType will used.
@@ -51,9 +51,9 @@ TODO
 
 # Reference Implementation
 
-A reference implementation is not started yet.
+A reference implementation is ongoing in  the **tip-497** branch.
+<https://core.tcl.tk/tcl/timeline?r=tip-497>
 
 # Copyright
 
 This document has been placed in the public domain.
-
