TIP #496 now final since the documentation updates that were missing at the time of voting are now done. Branch tip-496 is now merged.

--- a/tip/496.md
+++ b/tip/496.md
@@ -1,7 +1,7 @@
 # TIP 496: Display hints in ::entry ::spinbox ::ttk::entry ::ttk::spinbox and ::ttk::combobox
 	Author:         René Zaumseil <rzaumseil@kkg.ch>
 	Author:         François Vogel <fvogelnew1@free.fr>
-	State:          Accepted
+	State:          Final
 	Type:           Project
 	Vote:           Done
 	Created:        17-Jan-2018
@@ -35,7 +35,7 @@ To control the text appearance the following new options will be added:
 A patch implementing these changes is available in the fossil repository in the [tip-496 branch]
 (https://core.tcl.tk/tk/timeline?r=tip-496).
 
-Documentation updates not yet done.
+Documentation updates are in the same branch.
 
 # Example of use
 
