TIP #425 now final

--- a/tip/425.md
+++ b/tip/425.md
@@ -1,8 +1,8 @@
 # TIP 425: Correct use of UTF-8 in Panic Callback (Windows only)
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
-	State:          Voting
+	State:          Final
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        17-Jul-2013
 	Post-History:   
 	Keywords:       Tcl,platform integration,i18n
