TIP #508: Added link to the implementation (branch tip-508)

--- a/tip/508.md
+++ b/tip/508.md
@@ -11,13 +11,28 @@
 
 # Abstract
 
-This TIP proposes a new `[array default]` subcommand tha allows default values
+This TIP proposes a new `[array default]` subcommand that allows default values
 for arrays, causing that value to be returned any time an attempt is made to
 access an element of the array that isn't present.
 
-# TODO
+# Rationale
 
+TODO
 
+# Specification
+
+TODO
+
+	array default get arrayName
+	array default set arrayName value
+	array default exists arrayName
+	array default unset arrayName
+
+# Implementation
+
+The proposed implementation is available on branch
+[tip-508](https://core.tcl.tk/tcl/timeline?r=tip-508) in the Tcl Fossil
+repository.
 
 # Copyright
 
