--- a/tip/491.md
+++ b/tip/491.md
@@ -1,8 +1,8 @@
 # TIP 491: Threading Support: phasing out non-threaded builds
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
-	State:          Voting
+	State:          Final
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        11-Dec-2017
 	Post-History:
 	Keywords:       threads
