--- a/tip/500.md
+++ b/tip/500.md
@@ -276,6 +276,48 @@ Again, note that creation IDs are _always_ system-allocated and are _never_
 guaranteed to be unique between interpreters, either in multiple processes or
 in the same thread or process; they are only ever locally unique.
 
+# Example
+
+    oo::class create LabelEqual {
+		constructor {label} {
+			set [my varname label] $label
+		}
+        private {
+		    variable label
+			method getLabel {} {
+			    return $label
+			}
+		}
+		method equals {other} {
+			expr {$label eq [$other getLabel]}
+		}
+	}
+
+	oo::class create Evaluated {
+		superclass LabelEqual
+		# Poorly chosen variable name! Happens too easily in real life
+		variable label
+		constructor {expression} {
+			next $expression
+			set label [expr $expression]
+		}
+	    method value {} {
+			return $label
+		}
+	}
+
+	set expr1 [Evaluated new {1 + 2 + 3}]
+	set expr2 [Evaluated new {3 + 2 + 1}]
+	puts "one is two? [$expr1 equals $expr2]"
+	# Prints: one is two? 0
+	puts "one=[$expr1 value] two=[$expr2 value]"
+	# Prints: one=6 two=6
+	puts [info vars [info object namespace $expr1]::*]
+	# Prints something like: {::oo::Obj13::11 : label} ::oo::Obj13::label
+	catch {$expr2 getLabel} msg
+	puts $msg
+	# Prints: unknown method "getLabel": must be destroy, equals or value
+
 # Implementation
 
 See the [`tip-500` branch](https://core.tcl.tk/tcl/timeline?r=tip-500).
