Added comment to highlight a (minor) syntactic feature

--- a/tip/500.md
+++ b/tip/500.md
@@ -283,6 +283,7 @@ in the same thread or process; they are only ever locally unique.
             set [my varname label] $label
         }
         private {
+            # Two private declarations in the same block
             variable label
             method getLabel {} {
                 return $label
